# embassy-stm32-temp

./: Cargo.toml  memory.x  rust-toolchain.toml
.cargo/: config.toml
src/: board.rs  i2c.rs  lib.rs  main.rs  temperature.rs  work_indicator.rs
src/board/: nucleo_f411re.rs
src/board/nucleo_f411re/: executor.rs  i2c.rs  work_indicator.rs
src/display/: mod.rs
src/display/drawables/: mod.rs  temperature_text.rs
src/drivers/: sensors.rs
src/drivers/sensors/: dht22.rs  humidity.rs  lm75.rs  temperature.rs
src/temperature/: channel.rs  mod.rs
src/temperature/source/: ds3231.rs  lm75b.rs  mod.rs
