[package]
name = "embassy-stm32-temp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "embassy-stm32-temp"
test = false
bench = false

[dependencies]
embassy-executor = { version = "0.4.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "integrated-timers",
    "nightly",
    "defmt",
] }
embassy-time = { version = "0.2.0", features = ["defmt"] }
embassy-stm32 = { version = "0.1.0", features = [
    "defmt",
    "stm32f411re",
    "time-driver-tim2",
] }
embassy-sync = { version = "0.5" }

defmt = "0.3"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.1", features = ["print-defmt"] }

cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"


[patch.crates-io]
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "343be37f397ff82eb9d34161920449cc4b45c31a" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "343be37f397ff82eb9d34161920449cc4b45c31a" }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "343be37f397ff82eb9d34161920449cc4b45c31a" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "343be37f397ff82eb9d34161920449cc4b45c31a" }


[profile.release]
debug = 2
lto = true
opt-level = "s"
